force-app/main/default/objects/ucl_Legal_Advisor__c/ucl_Legal_Advisor__c.object-meta.xml
<CustomObject>
    <description>The custom object for Legal Advisors</description>
    <label>Legal Advisor</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal Advisors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>