force-app/main/default/objects/ucl_Legal_Advisor__c/fields/As_of_Date__c.field-meta.xml
<CustomField>
    <fullName>As_of_Date__c</fullName>
    <label>As of Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>