force-app/main/default/objects/ucl_Legal_Advisor__c/fields/Total_Clients__c.field-meta.xml
<CustomField>
    <fullName>Total_Clients__c</fullName>
    <label>Total Clients</label>
    <summaryForeignKey>ucl_Client__c.Asesored_By__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>