force-app/main/default/objects/ucl_Legal_Advisor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Number__c</columns>
    <columns>As_of_Date__c</columns>
    <columns>Total_Clients__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>